--- a/index.html
+++ b/index.html
@@ -5,35 +5,77 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WebStudio</title>
   </head>
-  <!--Шапка сайта-->
-  <header>
-    <nav>
-      <a lang="en" href="./index.html" aria-label="Логотип">
-        <img src="./images/Web Studio.svg" alt="Логотип" width="153" />
-      </a>
+  <body>
+    <!-- Шапка сайта -->
+    <header>
+      <nav>
+        <a lang="en" href="/"alt=<span>Web</span>Studio 
+        </a>
+        <ul>
+          <li><a href="">Студия</a></li>
+          <li><a href="">Портфолио</a></li>
+          <li><a href="">Контакты</a></li>
+        </ul>
+      </nav>
       <ul>
-        <li><a href="">Студия</a></li>
-        <li><a href="">Портфолио</a></li>
-        <li><a href="">Контакты</a></li>
+        <li>
+          <address>
+            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+          </address>
+        </li>
+        <li>
+          <address><a href="tel:+380961111111">+38 096 111 11 11</a></address>
+        </li>
       </ul>
-    </nav>
-    <ul>
-      <li>
-        <address>
-          <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        </address>
-      </li>
-      <li>
-        <address><a href="tel:+380961111111">+38 096 111 11 11</a></address>
-      </li>
-    </ul>
-  </header>
-  <main>
-    <section Hero>
-      <h1>Эффективные решения для вашего бизнеса</h1>
-      <button>Заказать услугу</button>
-    </section>
-  </main>
-  <footer></footer>
-  <body></body>
+    </header>
+    <main>
+      <!-- HERO секция-->
+      <section>
+        <h1>Эффективные решения для вашего бизнеса</h1>
+        <button>Заказать услугу</button>
+      </section>
+      <!-- Наши особенности-->
+      <section>
+        <h2>Наши особенности</h2>
+        <ul>
+          <li> 
+            <h3>Внимание к деталям</h3>
+            <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+          </li>
+          <li>
+            <h3>Пунктуальность</h3>
+            <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+          </li>
+          <li>
+            <h3>Планирование</h3>
+            <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+          </li>
+          <li>
+            <h3>Современные технологии</h3>
+            <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+          </li>
+        </ul>
+      </section>
+      <!-- Чем мы занимаемся-->
+      <section>
+        <h2>Чем мы занимаемся</h2>
+        <ul>
+          <li> 
+            <img src="./images/laptop.jpg" alt="Лаптоп"width="370">
+            <p> <b>Десктопные приложения</b></p>
+          </li>
+          <li>
+            <img src="./images/mobile.jpg" alt="Мобильный телефон"width="370">
+            <p> <b>Мобильные приложения</b></p>
+          </li>
+          <li>
+            <img src="./images/desktop.jpg" alt="Десктоп"width="370">
+            <p> <b>Дизайнерские решения </b></p>
+          </li>
+
+        </ul>
+      </section>
+    </main>
+    <footer></footer>
+  </body>
 </html>
