--- a/index.html
+++ b/index.html
@@ -61,18 +61,48 @@
         <h2>Чем мы занимаемся</h2>
         <ul>
           <li> 
-            <img src="./images/laptop.jpg" alt="Лаптоп"width="370">
+            <img src="./images/laptop.jpg" alt="Лаптоп" width="370">
             <p> <b>Десктопные приложения</b></p>
           </li>
           <li>
-            <img src="./images/mobile.jpg" alt="Мобильный телефон"width="370">
+            <img src="./images/mobile.jpg" alt="Мобильный телефон" width="370">
             <p> <b>Мобильные приложения</b></p>
           </li>
           <li>
-            <img src="./images/desktop.jpg" alt="Десктоп"width="370">
+            <img src="./images/desktop.jpg" alt="Десктоп" width="370">
             <p> <b>Дизайнерские решения </b></p>
           </li>
-
+        </ul>
+      </section>
+      <!--Наша команда-->
+      <section>
+        <h2>Наша команда</h2>
+        <ul>
+          <img src="./images/Nikolai.jpg" alt="Член компании" width="270">
+          <h3>Николай Кучеренко</h3>
+          <p lang="en">Product Designer</p>
+          <ul>
+            <li>
+              <a href="./images/instagram.svg" alt="Инстаграм">
+              </a>
+            </li>
+            </ul>
+        </li>
+        <li>
+          <img src="./images/Olga.jpg" alt="Член компании" width="270">
+           <h3>Ольга Иванова</h3>
+          <p lang="en">Frontend Developer</p>
+        </li>
+        <li>
+          <img src="./images/Andrei.jpg" alt="Член компании" width="270">
+           <h3>Андрей Шевченко</h3>
+          <p lang="en">Marketing</p>
+        </li>
+        <li>
+          <img src="./images/Ivan.jpg" alt="Член компании" width="270">
+           <h3>Иван Николаев</h3>
+          <p lang="en">UI Designer</p>
+        </li>
         </ul>
       </section>
     </main>
