Добавлена секция нашей команды
Вставлен список с фото работников и ссылками на соц.сети

--- a/index.html
+++ b/index.html
@@ -78,30 +78,67 @@
       <section>
         <h2>Наша команда</h2>
         <ul>
+          <li>
           <img src="./images/Nikolai.jpg" alt="Член компании" width="270">
           <h3>Николай Кучеренко</h3>
           <p lang="en">Product Designer</p>
           <ul>
             <li>
-              <a href="./images/instagram.svg" alt="Инстаграм">
-              </a>
-            </li>
+              <a href="" aria-label="Ссылка на Instagram">Instagram</a></li>
+               <li>
+              <a href="" aria-label="Ссылка на Twitter">Twitter</a></li>
+               <li>
+              <a href="" aria-label="Ссылка на Facebook">Facebook</a></li>
+              <li>
+              <a href="" aria-label="Ссылка на Linkedin">Linkedin</a></li>
             </ul>
+        </li>
         </li>
         <li>
           <img src="./images/Olga.jpg" alt="Член компании" width="270">
            <h3>Ольга Иванова</h3>
           <p lang="en">Frontend Developer</p>
+          <ul>
+            <li>
+              <a href="" aria-label="Ссылка на Instagram">Instagram</a></li>
+               <li>
+              <a href="" aria-label="Ссылка на Twitter">Twitter</a></li>
+               <li>
+              <a href="" aria-label="Ссылка на Facebook">Facebook</a></li>
+              <li>
+              <a href="" aria-label="Ссылка на Linkedin">Linkedin</a></li>
+            </ul>
         </li>
         <li>
           <img src="./images/Andrei.jpg" alt="Член компании" width="270">
            <h3>Андрей Шевченко</h3>
           <p lang="en">Marketing</p>
+          <ul>
+            <li>
+              <a href="" aria-label="Ссылка на Instagram">Instagram</a></li>
+               <li>
+              <a href="" aria-label="Ссылка на Twitter">Twitter</a></li>
+               <li>
+              <a href="" aria-label="Ссылка на Facebook">Facebook</a></li>
+              <li>
+              <a href="" aria-label="Ссылка на Linkedin">Linkedin</a></li>
+            </ul>
+        </li>
         </li>
         <li>
           <img src="./images/Ivan.jpg" alt="Член компании" width="270">
            <h3>Иван Николаев</h3>
           <p lang="en">UI Designer</p>
+          <ul>
+            <li>
+              <a href="" aria-label="Ссылка на Instagram">Instagram</a></li>
+               <li>
+              <a href="" aria-label="Ссылка на Twitter">Twitter</a></li>
+               <li>
+              <a href="" aria-label="Ссылка на Facebook">Facebook</a></li>
+              <li>
+              <a href="" aria-label="Ссылка на Linkedin">Linkedin</a></li>
+            </ul>
         </li>
         </ul>
       </section>
