Исправление в секции нашей команды
Параграф испарвила на заголовок

--- a/index.html
+++ b/index.html
@@ -62,15 +62,15 @@
         <ul>
           <li> 
             <img src="./images/laptop.jpg" alt="Лаптоп" width="370">
-            <p> <b>Десктопные приложения</b></p>
+            <h3> <b>Десктопные приложения</b></h3>
           </li>
           <li>
             <img src="./images/mobile.jpg" alt="Мобильный телефон" width="370">
-            <p> <b>Мобильные приложения</b></p>
+            <h3> <b>Мобильные приложения</b></h3>
           </li>
           <li>
             <img src="./images/desktop.jpg" alt="Десктоп" width="370">
-            <p> <b>Дизайнерские решения </b></p>
+            <h3> <b>Дизайнерские решения </b></h3>
           </li>
         </ul>
       </section>
@@ -140,6 +140,15 @@
               <a href="" aria-label="Ссылка на Linkedin">Linkedin</a></li>
             </ul>
         </li>
+        </ul>
+      </section>
+      <!--Постоянные клиенты-->
+      <section>
+        <h2>Постоянные клиенты</h2>
+        <ul>
+          <li>
+
+          </li>
         </ul>
       </section>
     </main>
