--- a/index.html
+++ b/index.html
@@ -84,13 +84,13 @@
           <p lang="en">Product Designer</p>
           <ul>
             <li>
-              <a href="" aria-label="Ссылка на Instagram">Instagram</a></li>
+              <a href="./images/instagram.svg" aria-label="Ссылка на Instagram">Instagram</a></li>
                <li>
-              <a href="" aria-label="Ссылка на Twitter">Twitter</a></li>
+              <a href="./images/twitter.svg" aria-label="Ссылка на Twitter">Twitter</a></li>
                <li>
-              <a href="" aria-label="Ссылка на Facebook">Facebook</a></li>
+              <a href="./images/facebook.svg" aria-label="Ссылка на Facebook">Facebook</a></li>
               <li>
-              <a href="" aria-label="Ссылка на Linkedin">Linkedin</a></li>
+              <a href="./images/linkedin.svg" aria-label="Ссылка на Linkedin">Linkedin</a></li>
             </ul>
         </li>
         </li>
@@ -147,8 +147,23 @@
         <h2>Постоянные клиенты</h2>
         <ul>
           <li>
-
-          </li>
+            <a href="">Клиент</a>
+          <img src="./images/Client1.svg"alt="Клиент компании"> </li>
+           <li>
+            <a href="">Клиент</a>
+          <img src="./images/Client2.svg"alt="Клиент компании"> </li>
+           <li>
+            <a href="">Клиент</a>
+          <img src="./images/Client3.svg"alt="Клиент компании"> </li>
+           <li>
+            <a href="">Клиент</a>
+          <img src="./images/Client4.svg"alt="Клиент компании"> </li>
+           <li>
+            <a href="">Клиент</a>
+          <img src="./images/Client5.svg"alt="Клиент компании"> </li>
+           <li>
+            <a href="">Клиент</a>
+          <img src="./images/Client6.svg"alt="Клиент компании"> </li>
         </ul>
       </section>
     </main>
