--- a/index.html
+++ b/index.html
@@ -167,6 +167,33 @@
         </ul>
       </section>
     </main>
-    <footer></footer>
+    <footer>
+       <a lang="en" href="/"alt=<span>Web</span>Studio 
+        </a>
+        <ul>
+          <li>
+            <address> <a href="https://goo.gl/maps/XEjchAh31XE4xnym6" target="_blank">г. Киев, пр-т Леси Украинки, 26</a></address>
+            </li>
+          <li>
+          <address>
+            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+          </address>
+        </li>
+        <li>
+          <address><a href="tel:+380961111111">+38 096 111 11 11</a></address>
+        </li>
+        </ul>
+        <h3>присоединяйтесь</h3>
+        <ul>
+            <li>
+              <a href="./images/instagram.svg" aria-label="Ссылка на Instagram">Instagram</a></li>
+               <li>
+              <a href="./images/twitter.svg" aria-label="Ссылка на Twitter">Twitter</a></li>
+               <li>
+              <a href="./images/facebook.svg" aria-label="Ссылка на Facebook">Facebook</a></li>
+              <li>
+              <a href="./images/linkedin.svg" aria-label="Ссылка на Linkedin">Linkedin</a></li>
+            </ul>
+    </footer>
   </body>
 </html>
