Лого в хедере и футере
Исправила тег спан

--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
     <!-- Шапка сайта -->
     <header>
       <nav>
-        <a lang="en" href="/"alt=<span>Web</span>Studio 
-        </a>
+        <a lang="en" href=""> <span>Web</span><span>Studio</span> </a>
         <ul>
           <li><a href="">Студия</a></li>
           <li><a href="">Портфолио</a></li>
@@ -38,21 +37,33 @@
       <section>
         <h2>Наши особенности</h2>
         <ul>
-          <li> 
+          <li>
             <h3>Внимание к деталям</h3>
-            <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+            <p>
+              Идейные соображения, а также начало повседневной работы по
+              формированию позиции.
+            </p>
           </li>
           <li>
             <h3>Пунктуальность</h3>
-            <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+            <p>
+              Задача организации, в особенности же рамки и место обучения кадров
+              влечет за собой.
+            </p>
           </li>
           <li>
             <h3>Планирование</h3>
-            <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+            <p>
+              Равным образом консультация с широким активом в значительной
+              степени обуславливает.
+            </p>
           </li>
           <li>
             <h3>Современные технологии</h3>
-            <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+            <p>
+              Значимость этих проблем настолько очевидна, что реализация
+              плановых заданий.
+            </p>
           </li>
         </ul>
       </section>
@@ -60,17 +71,21 @@
       <section>
         <h2>Чем мы занимаемся</h2>
         <ul>
-          <li> 
-            <img src="./images/laptop.jpg" alt="Лаптоп" width="370">
-            <h3> <b>Десктопные приложения</b></h3>
+          <li>
+            <img src="./images/laptop.jpg" alt="Лаптоп" width="370" />
+            <h3><b>Десктопные приложения</b></h3>
           </li>
           <li>
-            <img src="./images/mobile.jpg" alt="Мобильный телефон" width="370">
-            <h3> <b>Мобильные приложения</b></h3>
+            <img
+              src="./images/mobile.jpg"
+              alt="Мобильный телефон"
+              width="370"
+            />
+            <h3><b>Мобильные приложения</b></h3>
           </li>
           <li>
-            <img src="./images/desktop.jpg" alt="Десктоп" width="370">
-            <h3> <b>Дизайнерские решения </b></h3>
+            <img src="./images/desktop.jpg" alt="Десктоп" width="370" />
+            <h3><b>Дизайнерские решения </b></h3>
           </li>
         </ul>
       </section>
@@ -79,67 +94,91 @@
         <h2>Наша команда</h2>
         <ul>
           <li>
-          <img src="./images/Nikolai.jpg" alt="Член компании" width="270">
-          <h3>Николай Кучеренко</h3>
-          <p lang="en">Product Designer</p>
-          <ul>
-            <li>
-              <a href="./images/instagram.svg" aria-label="Ссылка на Instagram">Instagram</a></li>
-               <li>
-              <a href="./images/twitter.svg" aria-label="Ссылка на Twitter">Twitter</a></li>
-               <li>
-              <a href="./images/facebook.svg" aria-label="Ссылка на Facebook">Facebook</a></li>
+            <img src="./images/Nikolai.jpg" alt="Член компании" width="270" />
+            <h3>Николай Кучеренко</h3>
+            <p lang="en">Product Designer</p>
+            <ul>
               <li>
-              <a href="./images/linkedin.svg" aria-label="Ссылка на Linkedin">Linkedin</a></li>
-            </ul>
-        </li>
-        </li>
-        <li>
-          <img src="./images/Olga.jpg" alt="Член компании" width="270">
-           <h3>Ольга Иванова</h3>
-          <p lang="en">Frontend Developer</p>
-          <ul>
-            <li>
-              <a href="" aria-label="Ссылка на Instagram">Instagram</a></li>
-               <li>
-              <a href="" aria-label="Ссылка на Twitter">Twitter</a></li>
-               <li>
-              <a href="" aria-label="Ссылка на Facebook">Facebook</a></li>
+                <a
+                  href="./images/instagram.svg"
+                  aria-label="Ссылка на Instagram"
+                  >Instagram</a
+                >
+              </li>
               <li>
-              <a href="" aria-label="Ссылка на Linkedin">Linkedin</a></li>
-            </ul>
-        </li>
-        <li>
-          <img src="./images/Andrei.jpg" alt="Член компании" width="270">
-           <h3>Андрей Шевченко</h3>
-          <p lang="en">Marketing</p>
-          <ul>
-            <li>
-              <a href="" aria-label="Ссылка на Instagram">Instagram</a></li>
-               <li>
-              <a href="" aria-label="Ссылка на Twitter">Twitter</a></li>
-               <li>
-              <a href="" aria-label="Ссылка на Facebook">Facebook</a></li>
+                <a href="./images/twitter.svg" aria-label="Ссылка на Twitter"
+                  >Twitter</a
+                >
+              </li>
               <li>
-              <a href="" aria-label="Ссылка на Linkedin">Linkedin</a></li>
-            </ul>
-        </li>
-        </li>
-        <li>
-          <img src="./images/Ivan.jpg" alt="Член компании" width="270">
-           <h3>Иван Николаев</h3>
-          <p lang="en">UI Designer</p>
-          <ul>
-            <li>
-              <a href="" aria-label="Ссылка на Instagram">Instagram</a></li>
-               <li>
-              <a href="" aria-label="Ссылка на Twitter">Twitter</a></li>
-               <li>
-              <a href="" aria-label="Ссылка на Facebook">Facebook</a></li>
+                <a href="./images/facebook.svg" aria-label="Ссылка на Facebook"
+                  >Facebook</a
+                >
+              </li>
               <li>
-              <a href="" aria-label="Ссылка на Linkedin">Linkedin</a></li>
+                <a href="./images/linkedin.svg" aria-label="Ссылка на Linkedin"
+                  >Linkedin</a
+                >
+              </li>
             </ul>
-        </li>
+          </li>
+          <li>
+            <img src="./images/Olga.jpg" alt="Член компании" width="270" />
+            <h3>Ольга Иванова</h3>
+            <p lang="en">Frontend Developer</p>
+            <ul>
+              <li>
+                <a href="" aria-label="Ссылка на Instagram">Instagram</a>
+              </li>
+              <li>
+                <a href="" aria-label="Ссылка на Twitter">Twitter</a>
+              </li>
+              <li>
+                <a href="" aria-label="Ссылка на Facebook">Facebook</a>
+              </li>
+              <li>
+                <a href="" aria-label="Ссылка на Linkedin">Linkedin</a>
+              </li>
+            </ul>
+          </li>
+          <li>
+            <img src="./images/Andrei.jpg" alt="Член компании" width="270" />
+            <h3>Андрей Шевченко</h3>
+            <p lang="en">Marketing</p>
+            <ul>
+              <li>
+                <a href="" aria-label="Ссылка на Instagram">Instagram</a>
+              </li>
+              <li>
+                <a href="" aria-label="Ссылка на Twitter">Twitter</a>
+              </li>
+              <li>
+                <a href="" aria-label="Ссылка на Facebook">Facebook</a>
+              </li>
+              <li>
+                <a href="" aria-label="Ссылка на Linkedin">Linkedin</a>
+              </li>
+            </ul>
+          </li>
+          <li>
+            <img src="./images/Ivan.jpg" alt="Член компании" width="270" />
+            <h3>Иван Николаев</h3>
+            <p lang="en">UI Designer</p>
+            <ul>
+              <li>
+                <a href="" aria-label="Ссылка на Instagram">Instagram</a>
+              </li>
+              <li>
+                <a href="" aria-label="Ссылка на Twitter">Twitter</a>
+              </li>
+              <li>
+                <a href="" aria-label="Ссылка на Facebook">Facebook</a>
+              </li>
+              <li>
+                <a href="" aria-label="Ссылка на Linkedin">Linkedin</a>
+              </li>
+            </ul>
+          </li>
         </ul>
       </section>
       <!--Постоянные клиенты-->
@@ -148,33 +187,42 @@
         <ul>
           <li>
             <a href="">Клиент</a>
-          <img src="./images/Client1.svg"alt="Клиент компании"> </li>
-           <li>
+            <img src="./images/Client1.svg" alt="Клиент компании" />
+          </li>
+          <li>
             <a href="">Клиент</a>
-          <img src="./images/Client2.svg"alt="Клиент компании"> </li>
-           <li>
+            <img src="./images/Client2.svg" alt="Клиент компании" />
+          </li>
+          <li>
             <a href="">Клиент</a>
-          <img src="./images/Client3.svg"alt="Клиент компании"> </li>
-           <li>
+            <img src="./images/Client3.svg" alt="Клиент компании" />
+          </li>
+          <li>
             <a href="">Клиент</a>
-          <img src="./images/Client4.svg"alt="Клиент компании"> </li>
-           <li>
+            <img src="./images/Client4.svg" alt="Клиент компании" />
+          </li>
+          <li>
             <a href="">Клиент</a>
-          <img src="./images/Client5.svg"alt="Клиент компании"> </li>
-           <li>
+            <img src="./images/Client5.svg" alt="Клиент компании" />
+          </li>
+          <li>
             <a href="">Клиент</a>
-          <img src="./images/Client6.svg"alt="Клиент компании"> </li>
+            <img src="./images/Client6.svg" alt="Клиент компании" />
+          </li>
         </ul>
       </section>
     </main>
     <footer>
-       <a lang="en" href="/"alt=<span>Web</span>Studio 
-        </a>
-        <ul>
-          <li>
-            <address> <a href="https://goo.gl/maps/XEjchAh31XE4xnym6" target="_blank">г. Киев, пр-т Леси Украинки, 26</a></address>
-            </li>
-          <li>
+      <a lang="en" href=""> <span>Web</span><span>Studio</span> </a>
+      <ul>
+        <li>
+          <address>
+            <a href="https://goo.gl/maps/XEjchAh31XE4xnym6" target="_blank"
+              >г. Киев, пр-т Леси Украинки, 26</a
+            >
+          </address>
+        </li>
+        <li>
           <address>
             <a href="mailto:info@devstudio.com">info@devstudio.com</a>
           </address>
@@ -182,18 +230,30 @@
         <li>
           <address><a href="tel:+380961111111">+38 096 111 11 11</a></address>
         </li>
-        </ul>
-        <h3>присоединяйтесь</h3>
-        <ul>
-            <li>
-              <a href="./images/instagram.svg" aria-label="Ссылка на Instagram">Instagram</a></li>
-               <li>
-              <a href="./images/twitter.svg" aria-label="Ссылка на Twitter">Twitter</a></li>
-               <li>
-              <a href="./images/facebook.svg" aria-label="Ссылка на Facebook">Facebook</a></li>
-              <li>
-              <a href="./images/linkedin.svg" aria-label="Ссылка на Linkedin">Linkedin</a></li>
-            </ul>
+      </ul>
+      <h3>присоединяйтесь</h3>
+      <ul>
+        <li>
+          <a href="./images/instagram.svg" aria-label="Ссылка на Instagram"
+            >Instagram</a
+          >
+        </li>
+        <li>
+          <a href="./images/twitter.svg" aria-label="Ссылка на Twitter"
+            >Twitter</a
+          >
+        </li>
+        <li>
+          <a href="./images/facebook.svg" aria-label="Ссылка на Facebook"
+            >Facebook</a
+          >
+        </li>
+        <li>
+          <a href="./images/linkedin.svg" aria-label="Ссылка на Linkedin"
+            >Linkedin</a
+          >
+        </li>
+      </ul>
     </footer>
   </body>
 </html>
