Исправления в секции футер и хедер, наши особенности
Убрала тег b, изменила тег адреса

--- a/index.html
+++ b/index.html
@@ -20,10 +20,9 @@
         <li>
           <address>
             <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-          </address>
         </li>
         <li>
-          <address><a href="tel:+380961111111">+38 096 111 11 11</a></address>
+        <a href="tel:+380961111111">+38 096 111 11 11</a> </address>
         </li>
       </ul>
     </header>
@@ -36,7 +35,7 @@
       <!-- Наши особенности-->
       <section>
         <h2>Наши особенности</h2>
-        <ul>
+         <ul>
           <li>
             <h3>Внимание к деталям</h3>
             <p>
@@ -73,7 +72,7 @@
         <ul>
           <li>
             <img src="./images/laptop.jpg" alt="Лаптоп" width="370" />
-            <h3><b>Десктопные приложения</b></h3>
+            <h3>Десктопные приложения</h3>
           </li>
           <li>
             <img
@@ -81,11 +80,11 @@
               alt="Мобильный телефон"
               width="370"
             />
-            <h3><b>Мобильные приложения</b></h3>
+            <h3>Мобильные приложения</h3>
           </li>
           <li>
             <img src="./images/desktop.jpg" alt="Десктоп" width="370" />
-            <h3><b>Дизайнерские решения </b></h3>
+            <h3>Дизайнерские решения </h3>
           </li>
         </ul>
       </section>
@@ -186,27 +185,27 @@
         <h2>Постоянные клиенты</h2>
         <ul>
           <li>
-            <a href="">Клиент</a>
+            <a href="">Клиент1</a>
             <img src="./images/Client1.svg" alt="Клиент компании" />
           </li>
           <li>
-            <a href="">Клиент</a>
+            <a href="">Клиент2</a>
             <img src="./images/Client2.svg" alt="Клиент компании" />
           </li>
           <li>
-            <a href="">Клиент</a>
+            <a href="">Клиент3</a>
             <img src="./images/Client3.svg" alt="Клиент компании" />
           </li>
           <li>
-            <a href="">Клиент</a>
+            <a href="">Клиент4</a>
             <img src="./images/Client4.svg" alt="Клиент компании" />
           </li>
           <li>
-            <a href="">Клиент</a>
+            <a href="">Клиент5</a>
             <img src="./images/Client5.svg" alt="Клиент компании" />
           </li>
           <li>
-            <a href="">Клиент</a>
+            <a href="">Клиент6</a>
             <img src="./images/Client6.svg" alt="Клиент компании" />
           </li>
         </ul>
@@ -218,17 +217,13 @@
         <li>
           <address>
             <a href="https://goo.gl/maps/XEjchAh31XE4xnym6" target="_blank"
-              >г. Киев, пр-т Леси Украинки, 26</a
-            >
-          </address>
+              >г. Киев, пр-т Леси Украинки, 26</a>
         </li>
         <li>
-          <address>
             <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-          </address>
         </li>
         <li>
-          <address><a href="tel:+380961111111">+38 096 111 11 11</a></address>
+          <a href="tel:+380961111111">+38 096 111 11 11</a></address>
         </li>
       </ul>
       <h3>присоединяйтесь</h3>
