--- a/index.html
+++ b/index.html
@@ -18,11 +18,10 @@
       </nav>
       <ul>
         <li>
-          <address>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+          <a href="mailto:info@devstudio.com">info@devstudio.com</a>
         </li>
         <li>
-        <a href="tel:+380961111111">+38 096 111 11 11</a> </address>
+          <a href="tel:+380961111111">+38 096 111 11 11</a>
         </li>
       </ul>
     </header>
@@ -35,7 +34,7 @@
       <!-- Наши особенности-->
       <section>
         <h2>Наши особенности</h2>
-         <ul>
+        <ul>
           <li>
             <h3>Внимание к деталям</h3>
             <p>
@@ -84,7 +83,7 @@
           </li>
           <li>
             <img src="./images/desktop.jpg" alt="Десктоп" width="370" />
-            <h3>Дизайнерские решения </h3>
+            <h3>Дизайнерские решения</h3>
           </li>
         </ul>
       </section>
@@ -215,15 +214,15 @@
       <a lang="en" href=""> <span>Web</span><span>Studio</span> </a>
       <ul>
         <li>
-          <address>
-            <a href="https://goo.gl/maps/XEjchAh31XE4xnym6" target="_blank"
-              >г. Киев, пр-т Леси Украинки, 26</a>
+          <a href="https://goo.gl/maps/XEjchAh31XE4xnym6" target="_blank"
+            >г. Киев, пр-т Леси Украинки, 26</a
+          >
         </li>
         <li>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+          <a href="mailto:info@devstudio.com">info@devstudio.com</a>
         </li>
         <li>
-          <a href="tel:+380961111111">+38 096 111 11 11</a></address>
+          <a href="tel:+380961111111">+38 096 111 11 11</a>
         </li>
       </ul>
       <h3>присоединяйтесь</h3>
