--- a/index.html
+++ b/index.html
@@ -211,43 +211,41 @@
       </section>
     </main>
     <footer>
-      <a lang="en" href=""> <span>Web</span><span>Studio</span> </a>
-      <ul>
-        <li>
+      <div>
+        <a lang="en" href=""> <span>Web</span><span>Studio</span> </a>
+        <address>
           <a href="https://goo.gl/maps/XEjchAh31XE4xnym6" target="_blank"
             >г. Киев, пр-т Леси Украинки, 26</a
           >
-        </li>
-        <li>
           <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        </li>
-        <li>
           <a href="tel:+380961111111">+38 096 111 11 11</a>
-        </li>
-      </ul>
-      <h3>присоединяйтесь</h3>
-      <ul>
-        <li>
-          <a href="./images/instagram.svg" aria-label="Ссылка на Instagram"
-            >Instagram</a
-          >
-        </li>
-        <li>
-          <a href="./images/twitter.svg" aria-label="Ссылка на Twitter"
-            >Twitter</a
-          >
-        </li>
-        <li>
-          <a href="./images/facebook.svg" aria-label="Ссылка на Facebook"
-            >Facebook</a
-          >
-        </li>
-        <li>
-          <a href="./images/linkedin.svg" aria-label="Ссылка на Linkedin"
-            >Linkedin</a
-          >
-        </li>
-      </ul>
+        </address>
+      </div>
+      <div>
+        <h3>присоединяйтесь</h3>
+        <ul>
+          <li>
+            <a href="./images/instagram.svg" aria-label="Ссылка на Instagram"
+              >Instagram</a
+            >
+          </li>
+          <li>
+            <a href="./images/twitter.svg" aria-label="Ссылка на Twitter"
+              >Twitter</a
+            >
+          </li>
+          <li>
+            <a href="./images/facebook.svg" aria-label="Ссылка на Facebook"
+              >Facebook</a
+            >
+          </li>
+          <li>
+            <a href="./images/linkedin.svg" aria-label="Ссылка на Linkedin"
+              >Linkedin</a
+            >
+          </li>
+        </ul>
+      </div>
     </footer>
   </body>
 </html>
